[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "py_multi_3xui"
version = "0.0.2"
authors = [
  { name="Dmeet", email="someemail@example.com" },
]
description = "Test"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "py3xui>=0.3.4",
    "six>=1.17.0",
]

[project.urls]
Homepage = "https://github.com/Dmeetrogon/py_multi_3xui"
Issues = "https://github.com/Dmeetrogon/py_multi_3xui/issues"